fixed header overflowing in smaller width devices

--- a/style.css
+++ b/style.css
@@ -565,27 +565,25 @@ main ul li {
 
   body::before {
     background-position: 67%;
-    height: 90%;
+    height: 90vh;
   }
 
   header {
     margin-right: 20%;
     text-align: start;
-    height: 67vh;
-    padding-top: 50%;
-
+    height: 90vh;
   }
 
 
   header .container {
-    padding: 23% 10% 0 10%;
+    padding: 72% 10% 0 10%;
 
   }
 
   header h1 {
     font-size: 4em;
     padding: 0;
-    padding-bottom: 10%;
+    padding-bottom: 20%;
   }
 
   h2 {
